--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  password: MyString
-  superuser: 1
+  email: MyString
+  password_digest: MyString
 
 two:
   name: MyString
-  password: MyString
-  superuser: 1
+  email: MyString
+  password_digest: MyString
